--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
+  margin-top: 40px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+input, button{
+ height: 40px;
+ vertical-align: middle; 
+
+}
+input{
+  width: 200px;
+  padding-left: 10px;
+  font-size: 18px;
+  border-radius: 8px;
+  border: 1px solid rgb(191, 190, 190);
+
+}
+button{
+width: 150px;
+font-size: 18px;
+margin-left: 20px;
+border: 3px solid rgb(206, 238, 171);
+background-color: rgb(145, 240, 209);
+border-radius: 15px;
+color: rgb(51, 13, 87);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  background-color: azure;
+}
+li{
+  margin-top: 30px;
+  font-size: 18px;
+  padding-left: -100px;
+  
+}
+ul{
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
